--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,18 @@ dependencies:
   syncfusion_flutter_sliders: ^19.4.42 # 슬라이더
   word_break_text: ^0.1.0 # 자연스러운 줄바꿈 패키지
   getwidget: ^2.0.4 # 각종 위젯 패키지
+  flutter_launcher_icons: ^0.9.2 # 앱 아이콘 적용하기
+  flutter_app_name: ^0.1.1 # 앱 이름 변경하기
 
+# 앱 아이콘 이미지 패쓰 정의 ( https://mobile-app-developer.tistory.com/15 )
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
 
+# 앱 이름 정의 ( https://pub.dev/packages/flutter_app_name )
+flutter_app_name:
+  name: "매일성경"
 
 dev_dependencies:
   flutter_test:
@@ -75,10 +85,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    #- assets/holybible.db
-    - assets/echo_db_1.db
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/echo_db_1.db # 성경 데이터베이스
+    - assets/app_icon.png # 앱 아이콘
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
